<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="dialogViewModel"
                type="com.artf.inventoryapp.dialog.DialogViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/titleEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/soldButton"
                android:gravity="start"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/delete_this_product"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="normal|bold"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/confirmButton"
                    android:onClick="@{() -> dialogViewModel.onRequestButtonClick(4)}"
                    android:layout_weight="1"
                    android:textColor="@color/dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cancel"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"/>

            <Button
                    android:id="@+id/cancelButton"
                    android:onClick="@{() -> dialogViewModel.onRequestButtonClick(3)}"
                    android:layout_weight="1"
                    android:textColor="@color/dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/delete"/>

        </LinearLayout>
    </LinearLayout>
</layout>